added a red circle component that fades in and scrolls from the left

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
   text-align: center;
 }
 
+.redCircle{
+  height: 25px;
+  width: 25px;
+  background-color: red;
+  border-radius: 50%;
+  display: inline-block;
+}
