adds blue to the start and slows the duration

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .redCircle{
   height: 25px;
   width: 25px;
-  background-color: red;
+  /* background-color: red; */
   border-radius: 50%;
   display: inline-block;
 }
